# ChatpadAI

./: .bash_history  .gitconfig  README.md  pdf_loader.py
ChatPad AI/: srs.docx
ChatPad AI/hostit-html/: about.html  admin.html  admin_login.html  chat.html  index.html  login.html  user_upload.html
ChatPad AI/hostit-html/css/: admin.css  admin_login.css  chat.css  login.css  style.css  user_upload.css
ChatPad AI/hostit-html/images/: fevicon.png:Zone.Identifier
ChatPad AI/hostit-html/js/: admin.js  chat.js  custom.js  login.js  user_upload.js
ChatPad AI/hostit-html/pdfs/: Detailed Syllabi BE(CS) batch 2018 onwards(1) (1).pdf:Zone.Identifier
database/: pyproject.toml
database/sql_app/: crud.py  database.py  main.py  models.py  schemas.py  utils.py
frontend/hostit-html/: admin.html  admin_login.html  chat.html  index.html  login.html  user_upload.html
frontend/hostit-html/css/: admin.css  admin_login.css  chat.css  login.css  style.css  user_upload.css
frontend/hostit-html/images/: ai-hub-svgrepo-com.svg:Zone.Identifier
frontend/hostit-html/js/: admin.js  chat.js  login.js  user_upload.js
frontend/hostit-html/pdfs/: Computer Networking by James F.Kurose and W.Ross.pdf:Zone.Identifier  Introduction.docx
model/: pdf_loader.py  requirements.txt  url_loader.py
