[tool.poetry]
name = "pdf-chatbot"
version = "0.1.0"
description = ""
authors = ["msrf"]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.25.0"
fastapi = "^0.108.0"
pydantic = "^2.5.3"
SQLAlchemy = "^2.0.25"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.1"
SQLAlchemy-Utils = "^0.41.1"
python-multipart = "^0.0.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "^4.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
